<resources>
    <string name="app_name">Login Test</string>
    <string name="text_email">Email</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="login">login</string>
    <string name="registrasi">Registrasi</string>
    <string name="registrasi_username">Masukan Username</string>
    <string name="registrasi_email">Masukan Email</string>
    <string name="registrasi_password">Masukan Password</string>
    <string name="berhasil_login">Berhasil Login</string>
</resources>